# CentosDllPluginTest

./: .gitignore  CMakeLists.txt  loader.cpp  plugin.cpp
.devcontainer/: Dockerfile  devcontainer.json
